# typeslot

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
crates/typeslot/: Cargo.toml  README.md
crates/typeslot/examples/: basic.rs
crates/typeslot/src/: lib.rs
crates/typeslot/tests/: concrete_generic.rs  generic.rs  generic_derive.rs  multi_group.rs  name_clash.rs  single_group.rs
crates/typeslot_macros/: Cargo.toml  README.md
crates/typeslot_macros/src/: lib.rs
