[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/voxell-tech/typeslot"
keywords = ["typemap", "type-id", "slot", "static", "macro"]
categories = ["no-std", "rust-patterns", "development-tools"]

[workspace.dependencies]
typeslot_macros = { version = "0.2.1", path = "crates/typeslot_macros" }
inventory = "0.3"
