[package]
name = "typeslot"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Statically assigned slot indices for types, grouped by a marker type."
readme = "README.md"

[dependencies]
typeslot_macros.workspace = true
inventory.workspace = true
hashbrown = { workspace = true, optional = true }
spin = { workspace = true, optional = true }

[features]
default = ["generic"]
generic = ["dep:hashbrown", "dep:spin", "typeslot_macros/generic"]

[[test]]
name = "generic_derive"
required-features = ["generic"]
